Fixed vertical alignment of checkbox labels in all dialogs

--- a/wx-src/pages/clippingsMgr.css
+++ b/wx-src/pages/clippingsMgr.css
@@ -71,6 +71,10 @@ input[type="search"]::placeholder {
     font-style: italic;
 }
 
+input[type="checkbox"] + label {
+    vertical-align: -0.3em;
+}
+
 .hbox, .vbox {
     display: flex;
     justify-content: flex-start;
